# uhm

./: .gitignore  Cargo.toml  Dockerfile  compose.yaml  package.json
api/: Cargo.toml  Dockerfile  compose.yaml
api/migrations/: 20250507103355_markdown.sql  20250507103400_products.sql  20250507103404_ingredients.sql  20250507103408_lists.sql  20250507103412_blocks.sql  20250507103415_pages.sql
api/src/: db.rs  main.rs
api/src/api/: ingredient_collections.rs
api/src/db/: lists.rs  pages.rs
api/src/utilities/: pack.rs
database-api/src/: api.rs  db.rs  global.rs
database-api/src/db/: blocks.rs  ingredient_collections.rs  ingredients.rs  lists.rs  products.rs
database-api/src/utilities/: group_iter.rs  group_stream.rs  markdown.rs  modifier.rs  patch.rs  request.rs
docker/postgres/: Dockerfile
sql/: create_blocks.sql  create_ingredients.sql  create_lists.sql  create_products.sql  create_shopping_list.sql
src/: api.rs  db.rs  global.rs  main.rs  types.rs  utilities.rs
src/api/: lists.rs  shopping_list.rs
src/api/archive/: collections.rs  ingredient_collections.rs  plurals.rs  products.rs  recipes.rs  shopping_list.rs  units.rs  watch.rs
src/api/blocks/: collection.rs  collection_get.rs  collection_post.rs  resource.rs  resource_delete.rs  resource_get.rs  resource_patch.rs
src/api/ingredient_collections/: collection.rs  collection_get.rs  collection_post.rs  ingredients.rs  resource.rs  resource_delete.rs  resource_get.rs
src/api/list_items/: collection.rs  resource.rs
src/db/: blocks.rs  blocks2.rs  ingredient_collections.rs  ingredients.rs  list_items.rs  lists.rs  markdown.rs  pages.rs  paragraphs.rs  products.rs
src/routes/: +layout.svelte  +page.svelte  +page.ts  global.css
src/types/: error.rs  patch.rs  payloads.rs
src/utilities/: group.rs  modifier.rs  pack.rs  request.rs
web-app/: Dockerfile  package.json
(+254 files in other folders)
