[package]
name = "database-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["macros", "original-uri", "ws"] }
chrono = { version = "0.4.40", features = ["serde"] }
deadpool = { version = "0.12.1", features = ["rt_tokio_1"] }
deadpool-postgres = "0.14.0"
futures-util = { version = "0.3.31", features = ["channel"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full", "sync"] }
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4", "with-uuid-1"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["set-header"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
trait-variant = "0.1.2"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
# group-rs = { path = "../../group-rs" }
