[package]
name = "database-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
axum = { version = "0.7.7", features = ["macros", "original-uri", "ws"] }
chrono = { version = "0.4.40", features = ["serde"] }
futures-util = { version = "0.3.31" }
indexmap = "2.9.0"
pin-project-lite = "0.2.16"
pulldown-cmark = "0.13.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.5", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "uuid",
] }
tokio = { version = "1.41.1", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["set-header"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
trait-variant = "0.1.2"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
